<resources>
    <string name="app_name">SilentRoom</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="start_scan">SCAN</string>
    <string name="stop_scan">STOP</string>
    <string name="change_mode">CHANGE</string>
    <string name="current_time">Current time</string>
    <string name="silent_room">Silent Room Settings</string>

    <string name="advertisement">AD</string>
</resources>
